# KairoNotes

./: .gitignore  LICENSE  README.md  WARP.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.kiro/steering/: project-rules.md
Language/: en.json  ru.json  zh-CN.json  zh-TW.json
Plugins/: README.md
Plugins/example-plugin/: main.js  package.json
config/: settings.json
docs/: FEATURES.md  PLUGIN_DEVELOPMENT.md  TECHNICAL.md
scripts/: build.bat  build.ps1  build.sh
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  editor.rs  encoding.rs  file_ops.rs  fonts.rs  lib.rs  main.rs  plugin.rs  settings.rs  syntax.rs  system_integration.rs
src/components/: AboutPanel.tsx  CommandPalette.tsx  ContextMenu.tsx  Dialog.tsx  Editor.tsx  EditorTabs.tsx  FileIcon.tsx  MarkdownPreview.tsx  MenuBar.tsx  SearchPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  Terminal.tsx  TitleBar.tsx  ToolsPanel.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  ru.json  zh-CN.json  zh-TW.json
src/store/: index.ts
src/styles/: AboutPanel.css  App.css  CommandPalette.css  ContextMenu.css  Dialog.css  Editor.css  EditorTabs.css  FileIcon.css  MarkdownPreview.css  MenuBar.css  SearchPanel.css  SettingsPanel.css  Sidebar.css  StatusBar.css  Terminal.css  TitleBar.css  ToolsPanel.css  global.css
